c2dascript-transpile/tests/snapshots/snapshots__transpile@lift_const.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/lift_const.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(44) }, [CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(31) }, CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(56) }], false, false, true); declaration=lift_const; cause=unsupported external call: printf
--> ./tests/snapshots/lift_const.c:12:9

--> ./tests/snapshots/lift_const.c:4:1
