c2dascript-transpile/tests/snapshots/snapshots__transpile@macros.c.linux.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/os-specific/macros.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(395) }, [], false, false, false); declaration=errno_is_error; cause=unsupported external call: __errno_location
--> ./tests/snapshots/os-specific/macros.c:5:32

--> ./tests/snapshots/os-specific/macros.c:5:1
