c2dascript-transpile/tests/snapshots/snapshots__transpile@macros.das.snap
---
source: c2dascript-transpile/tests/snapshots.rs
expression: transpile --strict tests/snapshots/macros.c
---
TRANSLATION FAILED
operation=top-level declaration lowering; c_type=Function(CQualTypeId { qualifiers: Qualifiers { is_const: false, is_restrict: false, is_volatile: false }, ctype: CTypeId(44) }, [], false, false, false); declaration=local_muts; cause=unsupported statement expression declaration boundary
--> ./tests/snapshots/macros.c:87:21

--> ./tests/snapshots/macros.c:52:1
